AWS-Terraform-Deployment/EKS-Manifests/NGINX-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    # service.beta.kubernetes.io/aws-load-balancer-type: external
    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    # service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginx
